2022-04-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* ChangeLog,
	  src/SDCCicode.c,
	  src/SDCCmem.c,
	  support/regression/ports/mcs51-common/spec.mk,
	  support/regression/tests/gcc-torture-execute-20040707-1.c,
	  support/regression/tests/gcc-torture-execute-20050713-1.c,
	  support/regression/tests/gcc-torture-execute-20180131-1.c,
	  support/regression/tests/gcc-torture-execute-pr67226.c,
	  support/regression/tests/structparam.c:
	  Fix bug #3377.

2022-03-31 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCicode.c,
	  src/SDCCsymt.c,
	  src/ds390/main.c,
	  src/hc08/main.c,
	  src/mcs51/main.c,
	  src/mos6502/main.c,
	  support/regression/tests/bug-3368.c,
	  support/regression/tests/gcc-torture-execute-20050713-1.c,
	  support/regression/tests/gcc-torture-execute-20180131-1.c,
	  support/regression/tests/gcc-torture-execute-pr67226.c,
	  support/regression/tests/gcc-torture-execute-strct-varg-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-4.c,
	  support/regression/tests/structparam.c,
	  support/regression/tests/gcc-torture-execute-20021118-1.c,
	  support/regression/tests/gcc-torture-execute-20040707-1.c,
	  support/regression/tests/gcc-torture-execute-20180131-1.c,
	  support/regression/tests/gcc-torture-execute-pr67226.c,
	  support/regression/tests/gcc-torture-execute-920625-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-23.c:
	  struct parameter support for non-reentrant functions.

2022-03-29 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Reference section 3.2.5 in 3.2.4, fix typo in 1.2.

2022-03-29 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/sdbinutils/bfd/*:
	  Delete unused files as suggested by Felix Salfelder (felixs).

2022-03-28 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/tlcs90/strlen.s:
	  Fix regression from [r13318].

2022-03-28 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
